--- a/GameOfWar.ConsoleUI/GameOfWar.ConsoleUI.csproj
+++ b/GameOfWar.ConsoleUI/GameOfWar.ConsoleUI.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\GameOfWar.Application\GameOfWar.Application.csproj" />
+    </ItemGroup>
+
 </Project>
