--- a/GameOfWar.Application/GameOfWar.Application.csproj
+++ b/GameOfWar.Application/GameOfWar.Application.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\GameOfWar.Domain\GameOfWar.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
