--- a/GameOfWar.ConsoleUI/appsettings.json
+++ b/GameOfWar.ConsoleUI/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
     "PlayerCount" : 2,
+    "MinimumHandSize" : 20,
     "Serilog" : {
         "MinimumLevel" : {
             "Default" : "Information",
