Adds appsettings.json settings

--- a/GameOfWar.ConsoleUI/appsettings.json
+++ b/GameOfWar.ConsoleUI/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
-    "PlayerCount" : 2,
-    "MinimumHandSize" : 20,
+    "PlayerCount" : 3,
+    "MinimumHandSize" : 10,
+    "CardsDealtInWar" : 3,
     "Serilog" : {
         "MinimumLevel" : {
             "Default" : "Information",
